--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,30 +1,103 @@
-name: Django CI
+name: Backend CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main, dev]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: auditshield_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
     strategy:
-      max-parallel: 4
+      fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.11", "3.12"]
+
+    # ── Env vars must match backend/auditshield/settings/base.py exactly ─────
+    env:
+      DJANGO_SETTINGS_MODULE: auditshield.settings.development
+      DJANGO_SECRET_KEY: ci-test-secret-key-for-github-actions-only
+      DJANGO_ALLOWED_HOSTS: localhost,127.0.0.1
+      DEBUG: "True"
+      # Database — base.py reads these individually (not DATABASE_URL)
+      POSTGRES_DB: auditshield_test
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: "5432"
+      # Redis — must use localhost in CI, not 'redis' (Docker hostname)
+      REDIS_URL: redis://localhost:6379/0
+      CELERY_BROKER_URL: redis://localhost:6379/1
+      # Encryption key (base.py: FILE_ENCRYPTION_KEY)
+      FILE_ENCRYPTION_KEY: ""
+      # Email — use console backend in CI
+      EMAIL_BACKEND: django.core.mail.backends.console.EmailBackend
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: pip
+          cache-dependency-path: backend/requirements/base.txt
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            libmagic1 \
+            tesseract-ocr \
+            libpango-1.0-0 \
+            libpangoft2-1.0-0 \
+            libpq-dev \
+            poppler-utils
+
+      - name: Install Python dependencies
+        run: |
+          cd backend
+          python -m pip install --upgrade pip
+          pip install -r requirements/base.txt -r requirements/development.txt
+
+      - name: Run migrations
+        run: |
+          cd backend
+          python manage.py migrate --no-input
+
+      - name: Run tests
+        run: |
+          cd backend
+          python manage.py test --verbosity=2
+
+      - name: Lint (ruff)
+        run: |
+          cd backend
+          ruff check .
